# argscheck

./: LICENSE  README.md  setup.cfg  tst.py
argscheck/: __init__.py  collection.py  collections.py  comparable.py  containers.py  core.py  iter.py  numeric.py  optional.py  pathlike.py  sequence.py  string.py  utils.py
docs/: conf.py  index.rst  overview.rst  requirements.txt  usage.rst
docs/api/: collection.rst  core.rst  index.rst  iter.rst  numeric.rst  pathlike.rst  sequence.rst  string.rst
docs/api_reference/: collection.rst  comparable.rst  index.rst  optional.rst  pathlike.rst  sequence.rst  string.rst
docs/reference/: core.rst  index.rst
tests/: argscheck_test_case.py  mocks.py  test_collection.py  test_comparable.py  test_core.py  test_iter.py  test_numeric.py  test_optional.py  test_pathlike.py  test_sequence.py  test_string.py
