[metadata]
name = argscheck
version = attr: argscheck.__version__
author = Artium Dashuta
author_email = artium89@gmail.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/artiumd/argscheck
project_urls =
    Bug Tracker = https://github.com/artiumd/argscheck/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = argscheck
packages = find:
python_requires = >=3.6

[options.packages.find]
where = argscheck
